css/style.css
/* "Teknologröd" (the color of Teknologföreningen): #b20738 */

body {
  font: 12px "Montserrat-Light", sans-serif;
}

h1, h2, h3, h4 {
  font: 12px "Montserrat-Bold", sans-serif;
  text-transform: uppercase;
  font-size: 1em;
  color: black;
}

h1>a, h2>a, h3>a, h4>a {
  color: black;
}

h1>a:hover, h2>a:hover, h3>a:hover, h4>a:hover {
  color: black;
}

h1 {
  font-size: 1.5em;
}

h2 {
  font-size: 1.4em;
}

tbody {
  border: none;
}

tbody tr:nth-child(even) {
    background: none;
}

strong, .bold {
  font-family: "Montserrat-Bold", sans-serif;
}

.uppercase {
  text-transform: uppercase;
}

.teknologrod {
  color: #b20738 !important;
}

.pil::after {
  content: '►';
  color: #b20738;
  font-size: 0.8em;
  margin-left: 0.5em;
}

.knapp {
  display: inline-block;
  padding: 0.9em 1em 1.1em 1em;
  margin: 1em 0;
  background: #b20738;
  color: white;
  text-transform: uppercase;
  font-family: "Montserrat-Bold", sans-serif;
}

.knapp:hover {
  color: white;
}

/*
 * Template - Top bar and menu
 */

#menu-logo {
  width: 3.5em;
  margin-left: 0.5rem;
  display: inline-block;
}

#top-bar-wrapper {
  width: 100%;
}

#top-bar-wrapper::after {
  content: ' ';
  display: block;
  border-bottom: 1px solid black;
}

.top-bar, .top-bar ul {
  background-color: #ffffff;
}

.title-bar {
  display: flex;
  flex-direction: row;
  padding-top: 1.5em;
  padding-bottom: 1.5em;
  padding-left: 0.9375rem;
  padding-right: 0.9375rem;
}

.title-bar-header {
  white-space: nowrap;
  text-overflow: ellipsis;
  overflow: hidden;
  flex: 1;
  padding-right: 0.9375rem;
}

.title-bar button {
  outline: none;
}

@media screen and (min-width: 40em) {
  .top-bar .menu {
    display: flex;
    justify-content: flex-end;
    font-size: 0.9em;
  }
}

#top-module {
  margin-bottom: 4em;
}

ul.menu>li>a {
  text-transform: uppercase;
  color: #000000;
  font-size: 1.2em;
}

ul.menu>li.current>a {
  color: #b20738;
  font-family: "Montserrat-Bold", sans-serif;
}

.title-bar {
  background-color: white;
  color: black;
  text-transform: uppercase;
}

.menu-icon::after {
  background: black;
  box-shadow: 0 7px 0 black, 0 14px 0 black;
}

/*
 * Breadcrumbs
 */

ul.breadcrumb {
  list-style: none;
  margin: 1em 0;
}

ul.breadcrumb li {
  display: inline;
  text-transform: uppercase;
}

ul.breadcrumb .divider {
  font-size: 0.5em;
  vertical-align: middle;
}

/*
 * Template - Footer
 */

.site {
  display: flex;
  min-height: 100vh;
  flex-direction: column;
}

.site-content {
  flex: 1 0 auto;
}

#footer-wrapper {
  width: 100%;
  border-top: solid 1px black;
}

#footer-right {
  display: flex;
  justify-content: flex-end;
}

footer .logout-button .btn {
  margin: 1em;
  text-transform: uppercase;
  background:none!important;
  border:none; 
  padding:0!important;
  font: inherit;
  cursor: pointer;
}

/*
 * Content related css rules
 */

li.edit-icon, li.print-icon, li.email-icon {
  list-style-type: none;
  text-transform: uppercase;
  font-size: 0.8em;
  display: inline-block;
}

div.blog>div {
  border-bottom: 1px solid black;
  padding-bottom: 2em;
  margin-bottom: 4em;
}

div.blog>div:last-of-type {
  border-bottom: none;
  padding-bottom: 2em;
  margin-bottom: 4em;
}

/*
 * Events
 */

div.event {
  border-bottom: 1px solid black;
  padding-bottom: 2em;
  margin-bottom: 4em;
}

div.event:last-of-type {
  border-bottom: none;
  padding-bottom: 2em;
  margin-bottom: 4em;
}

div.event ul {
  list-style: none;
  margin: 0;
}

